<resources>
    <string name="app_name">HomeApp</string>
    <string name="audio">音频</string>
    <string name="video">视频</string>
    <string name="news">新闻</string>
    <string name="pay">支付</string>
    <string name="live_video">直播</string>
    <string name="communication">通讯</string>
    <string name="read">阅读</string>
    <string name="office">办公</string>
    <string name="privace">私人</string>
    <string name="gaode_map">高德地图</string>
    <string name="baidu_map">百度地图</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">Wifi</string>
    <string name="nfc">NFC</string>
    <string name="more">更多</string>
    <string name="information">私人定制，组合套装，作者：胡德志</string>
    <string name="local">本地视频</string>
    <string name="net">网络视频</string>
    <string name="mine">我的</string>
    <string name="local_tips">本地没有视频</string>
    <string name="text_loading_data">正在加载数据...</string>
    <string name="audio_logo_name">天籁之音</string>

    <string name="input_module_name">请命名模块名称</string>

    <!-- 登录 -->
    <string name="login_input_user_id">请输入帐号</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="city_tag">城 市:</string>
    <string name="poi_tag">地 点:</string>

    <string name="add_module">添加</string>

    <string-array name="city">
        <item>北京</item>
        <item>河北</item>
        <item>天津</item>
        <item>湖北</item>
        <item>重庆</item>
        <item>四川</item>
        <item>湖南</item>
        <item>内蒙古</item>
    </string-array>

    <string-array name="poi">
        <item>餐厅</item>
        <item>文具店</item>
        <item>打印店</item>
        <item>超市</item>
        <item>停车场</item>
        <item>酒店</item>
        <item>书店</item>
    </string-array>

    <string-array name="transport_tools">
        <item>火车</item>
        <item>汽车</item>
        <item>飞机</item>
    </string-array>


    <string name="net_broke">网络断开</string>
    <string name="net_connect">网络连接</string>
    <string name="live">直播</string>
    <string name="rank_list">排行</string>
    <string name="find">发现</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="random_look">随便看看</string>
    <string name="regist">注册</string>
    <string name="anchor_roomnum_link">主播名称/房间号/链接</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="sign">签到</string>
    <string name="my_attention">我的关注</string>
    <string name="my_coin">我的帆币</string>
    <string name="my_gold">我的帆宝</string>
    <string name="my_bag">我的背包</string>
    <string name="edit_info">编辑资料</string>
    <string name="setting">设置</string>
    <string name="maxprogress">/ 1000</string>
    <string name="assignment">任务</string>
    <string name="mall">商城</string>
    <string name="your_like_anchor">搜索你喜欢的主播</string>
    <string name="hint_countinput_login">请输入账号</string>
    <string name="hint_passinput_login">请输入密码</string>
    <string name="login_soon">立即登录</string>
    <string name="fast_login">快捷登录</string>
    <string name="registnew">注册新账号？</string>
    <string name="rechargeGift">首充送豪礼</string>
    <string name="recharge">充值</string>
    <string name="chooseChargeWay">选择充值方式:</string>
    <string name="leftMoney">余额:</string>
    <string name="coin">帆币</string>
    <string name="wechatPay">微信支付</string>
    <string name="qq">QQ钱包</string>
    <string name="tips">为了交易安全，强烈建议您</string>
    <string name="bindcell">绑定手机号</string>
    <string name="alipay">支付宝</string>
    <string name="knowmore">了解帆币</string>
    <string name="agree">同意</string>
    <string name="chooseMoney">选择充值金额:</string>
    <string name="protacla">千帆直播收费协议</string>
    <string name="inputNumber">金额输入</string>
    <string name="yuan">元</string>
    <string name="sure">确定</string>
    <string name="room_number">房间号:</string>
    <string name="addFocus">+关注</string>
    <string name="online">在线</string>
    <string name="donate">贡献</string>
    <string name="giveGift">赠送礼物</string>
    <string name="coins">帆币 /</string>
    <string name="giveTo">送给:</string>
    <string name="zengsong">赠送</string>
    <string name="ID">ID</string>
    <string name="account">帆号</string>
    <string name="setIcon">设置头像</string>
    <string name="sex">性别</string>
    <string name="nick">昵称</string>
    <string name="birth">生日</string>
    <string name="city">城市</string>
    <string name="email">邮箱</string>
    <string name="takephoto">拍照</string>
    <string name="select">从相册中选</string>
    <string name="alterEmail">修改邮箱</string>
    <string name="inputYourEmail">请输入你的邮箱地址</string>
    <string name="next">下一步</string>
    <string name="goLogin">去登录</string>
    <string name="iAgree">我已阅读并同意《服务条款》</string>
    <string name="beautyEffect">美颜效果</string>
    <string name="whiteEffect">美白效果</string>
    <string name="not_hold">当前设备不支持美颜功能</string>
    <string name="illegal">当前地址不合法</string>
    <string name="open_wifi">打开Wifi</string>
    <string name="close_wifi">关闭Wifi</string>
    <string name="search_wifi">搜索Wifi</string>
    <string name="scan_wifi">ScanResult</string>
</resources>
