<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.hudezhi.freedom.homeapp.live_video.view.activity.RegisterView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_back_register"
            android:layout_width="8dp"
            android:layout_height="16dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:onClick="onBackClick"
            android:src="@mipmap/ic_white_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_back_register"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/regist"
            android:textColor="@color/textColorPrimary"
            android:textSize="15sp" />
    </RelativeLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/login_icon_logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/login_frame_shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_login_account" />

                <EditText
                    android:id="@+id/edit_account_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_countinput_login"
                    android:paddingLeft="20dp"
                    android:textColor="#ff000000"
                    android:textColorHint="@color/colorTextUnselected"
                    android:textSize="15sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorDevideLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/ic_login_pwd" />

                <EditText
                    android:id="@+id/edit_pass_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_passinput_login"
                    android:paddingLeft="20dp"
                    android:textColor="#ff000000"
                    android:textColorHint="@color/colorTextUnselected"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/check_agree_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:button="@drawable/alipay_checkbox_selector" />

            <TextView
                android:id="@+id/text_protocal_alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@id/check_agree_register"
                android:text="@string/iAgree"
                android:textColor="#ffffffff" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_next_soon_registe"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_soon_button_shape"
            android:onClick="goNext"
            android:text="@string/next"
            android:textColor="@color/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:onClick="onRegsiter"
                android:text="@string/goLogin"
                android:textColor="@color/textColorPrimary" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
