<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context="com.hudezhi.freedom.homeapp.person.view.LoginActivity">

    <include
        android:id="@+id/titlebar_private"
        layout="@layout/private_titlebar_layout" />

    <ImageView
        android:id="@+id/imgContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:src="@mipmap/logo_private" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_login_userid"
        android:gravity="center_vertical"
        android:paddingLeft="70dp">

        <EditText
            android:id="@+id/edit_UserName_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_input_user_id"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_login_userpwd"
        android:gravity="center_vertical"
        android:paddingLeft="70dp">

        <EditText
            android:id="@+id/edit_UserPassword_register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_input_user_password"
            android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onRegister"
        android:text="@string/register" />

</LinearLayout>
