<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.hudezhi.freedom.homeapp.person.view.LoginActivity">

    <ImageView
        android:id="@+id/imgContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/logo_private" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_login_userid"
        android:gravity="center_vertical"
        android:paddingLeft="70dp">

        <EditText
            android:id="@+id/edit_UserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_input_user_id"
            android:inputType="textEmailAddress">

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/bg_login_userpwd"
        android:gravity="center_vertical"
        android:paddingLeft="70dp">

        <EditText
            android:id="@+id/edit_UserPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/login_input_user_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_text_register"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="right|center_vertical"
        android:orientation="vertical"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onToRegister"
            android:padding="5dp"
            android:text="新用户注册？"
            android:textColor="@color/colorTextWhite"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_login_selector"
        android:onClick="onLogin"
        android:text="@string/login" />

</LinearLayout>
